--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,33 @@ body {
   color: #0290ff;
 }
 
+.icon-button {
+  cursor: pointer;
+  width: 2.813rem;
+  height: 2.813rem;
+  border-radius: 50%;
+  border: 1px solid #e8e8e8;
+  background-color: #fff;
+  margin-left: 50%;
+}
+
+.primary-color {
+  color: #0290ff;
+}
+
+.material-icons {
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+}
+
 .book {
   background-color: #fff;
   border-radius: 4px;
